# fantastic-giggle

./: .gitignore  CMakeLists.txt  README.md  fantastic_giggle
include/: config.in.txt  fantastic_giggle.hpp  verilator_template.hpp
old/: CMakeLists.txt
old/include/: config.in.txt  fantastic_giggle.hpp
old/rtl/: brancher.sv  multiplier8.sv  shader.sv
old/rtl_alu2/: alu2.sv
old/rtl_axi4/: CMakeLists.txt  axi4.sv  harness.cpp  rtl_axi4_dut.v
old/rtl_barrelshifter16/: barrelshifter16.sv  rtl_barrelshifter16_dut.v
old/rtl_brancher/: brancher.sv  config.in.txt  rtl_brancher_dut.v
old/rtl_brancher/test/: run.lua
old/rtl_carry4_alu2/: carry4_alu2.sv
old/rtl_carry4_alu2/test/: run.lua
old/rtl_lod4/: lod4.sv
old/rtl_lod4/test/: run.lua
old/rtl_lod8/: harness.hpp  lod8.sv
old/rtl_lod8/test/: run.lua
old/rtl_memory/: CMakeLists.txt  harness.hpp
old/rtl_registerfile16x8/: registerfile16x8.sv  rtl_registerfile16x8_dut.v
old/src/: fantastic_giggle.cpp
rtl/: memory.sv
rtl_adder2/: CMakeLists.txt  adder2.sv  harness.cpp  harness.hpp  rtl_adder2_dut.v
rtl_adder2/test/: run.lua
rtl_alu2/: CMakeLists.txt  alu2.sv  harness.hpp  rtl_alu2_dut.v
rtl_alu2/test/: run.lua
rtl_barrelshifter16/: CMakeLists.txt  barrelshifter16.sv  harness.cpp  harness.hpp  rtl_barrelshifter16_dut.v
rtl_barrelshifter16/test/: run.lua
rtl_brancher/: CMakeLists.txt  brancher.sv  harness.hpp  rtl_brancher_dut.v
rtl_carry4_alu2/: CMakeLists.txt  alu2.sv  carry4_alu2.sv  harness.cpp  harness.hpp  rtl_carry4_alu2_dut.v
rtl_carry4_alu2/test/: run.lua
rtl_carryadder8/: CMakeLists.txt  adder2.sv  carryadder8.sv  harness.cpp  harness.hpp  rtl_carryadder8_dut.v
rtl_control/: CMakeLists.txt  control.sv  harness.cpp  harness.hpp  rtl_control_dut.v
rtl_control/test/: run.lua
rtl_core/: CMakeLists.txt  accumulator4.sv  decoder.sv  dut.v  harness.cpp  harness.hpp  program_counter.sv
rtl_core/test/: run.lua
rtl_lod4/: CMakeLists.txt  harness.cpp  harness.hpp  lod4.sv  rtl_lod4_dut.v
rtl_lod8/: CMakeLists.txt  harness.cpp  rtl_lod8_dut.v
rtl_memory/: harness.cpp  memory.sv  rtl_memory_dut.v
rtl_memory16/: CMakeLists.txt  harness.cpp  harness.hpp  memory16.sv  rtl_memory16_dut.v
rtl_memory16/test/: run.lua
rtl_program_counter/: CMakeLists.txt  harness.cpp  harness.hpp  program_counter.sv  rtl_program_counter_dut.v
rtl_program_counter/test/: run.lua
rtl_registerfile16x8/: CMakeLists.txt  harness.cpp  harness.hpp  registerfile16x8.sv  rtl_registerfile16x8_dut.v
rtl_registerfile16x8/test/: run.lua
rtl_root/: CMakeLists.txt  decoder.sv  harness.cpp  rtl_root_dut.v
rtl_shift2/: CMakeLists.txt  harness.cpp  harness.hpp  rtl_shift2_dut.v  shift2.sv
rtl_shift2/test/: run.lua
rtl_test_example/: CMakeLists.txt  blinky.sv  config.in.txt  dut.v  harness.cpp  harness.hpp
rtl_test_example/test/: run.lua
src/: fantastic_giggle.cpp  verilator_template.cpp
utilities/: genmem.py
